--- a/taskify-back/pyproject.toml
+++ b/taskify-back/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Vladyslav Chaliuk",email = "chaliukvladyslav@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.12, <3.14"
+requires-python = ">=3.11, <3.14"
 dependencies = [
     "fastapi[all] (>=0.115.12,<0.116.0)",
     "sqlalchemy (>=2.0.40,<3.0.0)",
@@ -32,3 +32,8 @@ ruff = "^0.11.6"
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+
+server = "src.taskify.main:main"
+migration = "src.taskify.main:migrate"
