--- a/taskify-back/Dockerfile
+++ b/taskify-back/Dockerfile
@@ -28,6 +28,26 @@ COPY . /app
 RUN poetry config virtualenvs.create false \
     && poetry install --no-interaction --no-ansi
 
+ARG RAILWAY_PUBLIC_DOMAIN
+ARG RAILWAY_PRIVATE_DOMAIN
+ARG RAILWAY_PROJECT_NAME
+ARG RAILWAY_ENVIRONMENT_NAME
+ARG RAILWAY_SERVICE_NAME
+ARG RAILWAY_PROJECT_ID
+ARG RAILWAY_ENVIRONMENT_ID
+ARG RAILWAY_SERVICE_ID
+ARG ORIGIN
+
+
+ENV ORIGIN=${ORIGIN} \
+  RAILWAY_PUBLIC_DOMAIN=$RAILWAY_PUBLIC_DOMAIN \
+  RAILWAY_PRIVATE_DOMAIN=$RAILWAY_PRIVATE_DOMAIN \
+  RAILWAY_PROJECT_NAME=$RAILWAY_PROJECT_NAME \
+  RAILWAY_ENVIRONMENT_NAME=$RAILWAY_ENVIRONMENT_NAME \
+  RAILWAY_SERVICE_NAME=$RAILWAY_SERVICE_NAME \
+  RAILWAY_PROJECT_ID=$RAILWAY_PROJECT_ID \
+  RAILWAY_ENVIRONMENT_ID=$RAILWAY_ENVIRONMENT_ID \
+  RAILWAY_SERVICE_ID=$RAILWAY_SERVICE_ID
 
 # Expose the port Railway expects
 EXPOSE 8000
