--- a/taskify-front/Dockerfile
+++ b/taskify-front/Dockerfile
@@ -34,9 +34,9 @@ ARG RAILWAY_SERVICE_NAME
 ARG RAILWAY_PROJECT_ID
 ARG RAILWAY_ENVIRONMENT_ID
 ARG RAILWAY_SERVICE_ID
-ARG BASE_URL
+ARG BACKEND_URL
 
-ENV BASE_URL=$BASE_URL \
+ENV BACKEND_URL=$BACKEND_URL \
   RAILWAY_PUBLIC_DOMAIN=$RAILWAY_PUBLIC_DOMAIN \
   RAILWAY_PRIVATE_DOMAIN=$RAILWAY_PRIVATE_DOMAIN \
   RAILWAY_PROJECT_NAME=$RAILWAY_PROJECT_NAME \
@@ -47,7 +47,7 @@ ENV BASE_URL=$BASE_URL \
   RAILWAY_SERVICE_ID=$RAILWAY_SERVICE_ID
 
 # Expose Nuxt default port
-EXPOSE 3000
+EXPOSE 8080
 
 # Start the app
 CMD ["node", ".output/server/index.mjs"]
